# azahar

./: .gitignore  .gitlab-ci.yml  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  Doxyfile  GEMINI.md  NETWORK_STREAMING.md  README.md
.ci/: docker.sh  libretro-ci.yml  libretro-pack.sh  linux.sh  macos.sh  mxe.sh  windows.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  canary.yml  first_time_contributor_reopen.yml  format.yml  libretro.yml
CMakeModules/: BundleTarget.cmake  DownloadExternals.cmake  GenerateSettingKeys.cmake  UseCcache.cmake
docker/azahar-room/: Dockerfile
src/: .clang-tidy  CMakeLists.txt
src/android/: .editorconfig  build.gradle.kts  justfile
src/audio_core/: CMakeLists.txt  cubeb_sink.cpp  libretro_sink.h  sink.h  sink_details.h
src/azahar_ctl/: CMakeLists.txt  azahar_ctl.cpp
src/citra_libretro/: CMakeLists.txt  citra_libretro.cpp  core_settings.cpp  core_settings.h  environment.cpp  environment.h  libretro_vk.cpp  libretro_vk.h
src/citra_meta/: CMakeLists.txt  common_strings.h  main.cpp
src/citra_qt/: CMakeLists.txt  bootmanager.cpp  citra_qt.cpp  citra_qt.h  dev_ipc_server.cpp  dev_ipc_server.h  discord_impl.cpp  game_list.cpp  game_list.h  game_list_p.h  game_list_worker.cpp  game_list_worker.h  hotkey_monitor.cpp  hotkey_monitor.h  hotkeys.cpp  hotkeys.h  main.ui  uisettings.h
src/citra_room/: citra_room.cpp
src/citra_sdl/: citra_sdl.cpp  config.cpp  default_ini.h
src/common/: CMakeLists.txt  apple_utils.h  (+28 more)
src/lime/: CMakeLists.txt  common_strings.h  main.cpp
tools/: check-kotlin-formatting.sh  fix-kotlin-formatting.sh  verify-release.sh
(+632 files in other folders)
